# streamlit_whisper_gpt

./: README.md  app.py  cuda_test2.py  cuda_test4.py  pyproject.toml  requirements.txt
